--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+Aseprite/
+*.aseprite
+Secrets.plist
+betta
+crow
+koala
+panda
+trex
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
